<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:layout_height="match_parent"
        tools:context=".Info">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

    <ImageView android:layout_width="250dp"
              android:layout_alignParentLeft="true"
               android:layout_alignParentRight="true"
               android:src="@drawable/skgezhil"
               android:id="@+id/skgezhil"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_height="250dp"/>
    <TextView android:layout_width="match_parent"
            android:background="@color/transparent"
              android:gravity="center"
              android:layout_below="@+id/skgezhil"
              android:textSize="30dp"
              android:textColor="@color/colour7"
              android:id="@+id/skgezhil_text"
            app:layout_constraintTop_toBottomOf="@+id/skgezhil"
            android:text="This app is created by SKGEzhil"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:background="@color/transparent"
              android:layout_below="@+id/skgezhil_text"
              android:gravity="center"
              android:textColor="@color/colour7"
              android:id="@+id/name"
              android:textSize="30dp"
              app:layout_constraintTop_toBottomOf="@+id/skgezhil_text"
              android:text="App Name: All in All Alaguraja"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:layout_below="@+id/name"
              android:background="@color/transparent"
              android:gravity="center"
              android:id="@+id/version"
              android:textSize="30dp"
              app:layout_constraintTop_toBottomOf="@+id/name"
              android:textColor="@color/colour7"
              android:text="App Version : 1.0"
              android:layout_height="wrap_content"/>
    <Button android:layout_width="match_parent"
              android:background="@color/transparent"
              android:gravity="center"
            android:layout_below="@+id/version"
            android:id="@+id/playstore"
            android:textColor="@color/colour6"
              android:textSize="30dp"
              app:layout_constraintTop_toBottomOf="@+id/version"
              android:text="@string/playstore"
              android:layout_height="wrap_content"/>
    <Button android:layout_width="match_parent"
              android:background="@color/transparent"
              android:gravity="center"
            android:layout_below="@+id/playstore"
            android:id="@+id/blog"
            android:textColor="@color/colour6"
              android:textSize="30dp"
              app:layout_constraintTop_toBottomOf="@+id/playstore"
              android:text="@string/blog"
              android:layout_height="wrap_content"/>
    <Button android:layout_width="match_parent"
            android:background="@color/transparent"
            android:gravity="center"
            android:layout_below="@+id/blog"
            android:textColor="@color/colour6"
            android:textSize="30dp"
            app:layout_constraintTop_toBottomOf="@+id/blog"
            android:text="@string/youtube"
            android:id="@+id/youtube_sub"
            android:layout_height="wrap_content"/>
    <Button android:layout_width="match_parent"
            android:background="@color/transparent"
            android:textColor="@color/colour6"
            android:gravity="center"
            android:layout_below="@+id/youtube_sub"
            android:textSize="30dp"
            android:id="@+id/instagram_text"
            app:layout_constraintTop_toBottomOf="@+id/youtube"
            android:text="@string/instagram"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</ScrollView>